<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/app_name"
            android:fontFamily="@font/ddangs_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            >

        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"

            android:src="@drawable/calendar_main">


        </ImageView>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_pre_sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/btn_oval_yes"
        android:fontFamily="@font/ddangs_bold"
        android:gravity="center"
        android:text="@string/txt_pre_sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:id="@+id/txt_pre_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/btn_oval_border_no"
        android:fontFamily="@font/ddangs_bold"
        android:gravity="center"
        android:text="@string/txt_pre_sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"></TextView>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/kakao_login_large_wide">

    </androidx.constraintlayout.utils.widget.ImageFilterView>

</LinearLayout>