<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp">
        >

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/ddangs_bold"
            android:gravity="center"
            android:text="2023년 xx월 xx일"
            android:textColor="#96648f"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ddangs_bold"
            android:gravity="center"
            android:text="@string/txt_select_time_insert_title"
            android:textColor="#0a0923"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_timer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"


                android:layout_marginRight="10dp"
                android:layout_weight="1"


                android:background="@drawable/btn_oval_border_no"
                android:fontFamily="@font/ddangs_medium"
                android:gravity="center"
                android:text="@string/txt_select_time_insert_timer"
                android:textColor="#4267eb"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"

                android:layout_marginRight="20dp"
                android:layout_weight="1"


                android:background="@drawable/btn_oval_yes"
                android:fontFamily="@font/ddangs_medium"
                android:gravity="center"
                android:text="@string/txt_select_time_insert_input"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>